testdata/baselines/reference/submodule/compiler/jsFileClassPropertyType.errors.txt
bar.ts(1,11): error TS2339: Property 'p' does not exist on type 'C'.
foo.js(3,12): error TS2339: Property 'p' does not exist on type 'C'.


==== foo.js (1 errors) ====
    class C {
      constructor () {
          this.p = 0;
               ~
!!! error TS2339: Property 'p' does not exist on type 'C'.
      }
    }
    
==== bar.ts (1 errors) ====
    (new C()).p = "string";
              ~
!!! error TS2339: Property 'p' does not exist on type 'C'.
    